resolving bug on iphone popup

--- a/Flipfly/styles/landscape.css
+++ b/Flipfly/styles/landscape.css
@@ -106,7 +106,7 @@ body{
   -webkit-animation: animateLockIphone 1.5s ease-out infinite alternate;
 }
 #popupiphone .pictoIphone:nth-child(2){
-    animation: animateLockIphone 1.5. ease-out 0.7s infinite alternate;
+    animation: animateLockIphone 1.5s ease-out 0.7s infinite alternate;
     -webkit-animation: animateLockIphone 1.5s ease-out 0.7s infinite alternate;
 }
 @keyframes animateLockIphone {
